peek.css
/*! Peek.js (c) 2014 Mark Macdonald | http://mtmacdonald.github.io/peek/LICENSE */

.line {
  fill: none;
  stroke: steelblue;
  stroke-width: 2;
}

.axis path, .axis line{
  fill: none;
  stroke: grey;
  stroke-width: 1;
  shape-rendering: crispEdges; 
}

.axis text {
  font-family: sans-serif;
  font-size: 11px;
}

.grid .tick {
    stroke: lightgrey;
    opacity: 0.7;
}
.grid path {
    stroke-width: 0;
}

.legend, .plot {float: left;}

.legend {
	width: 300px;
}

.key {
	width: 15px;
	height: 10px;
	display: inline-block;
  box-sizing:border-box;
}
.key-text {
	padding-left: 5px;
}


circle {
  stroke: steelblue;
  stroke-width: 2px;
}

.infobox {
  position: absolute;
  min-width: 100px;
  padding: 6px 6px;
  border-radius: 4px;
  box-shadow: 2px 2px 2px rgba(68,68,68,0.4);
  background-color: rgba(255,255,255,.75);
  display: none;
}
  .infobox p {
    margin:0;
  }

